--- a/elm.css
+++ b/elm.css
@@ -19,7 +19,6 @@ html{
 body{
 	width: 100%;
     height: 100% ;
-    
 }
 #app{
 	width: 100%;
@@ -27,13 +26,18 @@ body{
 	display:flex;
     flex-direction:column;
 }
+article{
+	width: 100%;
+	overflow: auto;
+	flex:1;
+}
 #headwrap{
 	width: 100%;
-	height:.8rem;
-	padding: 0 .1rem;
+	height:.8rem;	
 	background: #0092ff;
 }
 .top{
+	padding: 0 .1rem;
 	height: .39rem;
 	line-height: .31rem;
 	padding-top: 0.08rem;
@@ -53,8 +57,12 @@ body{
 .search{
 	height: .41rem;
 	line-height: .41rem;
-	padding: 0 .12rem;
+	background: #0092ff;
+	width: 100%;
+	position: absolute;
+	top:.39rem;
 	text-align: center;
+	z-index:20;
 }
 .search section{
 	position: relative;
@@ -62,6 +70,7 @@ body{
 .search input{
 	width:100%;
 	height: .31rem;
+	width: 3.51rem;
 	font-size: .14rem;
 	line-height: .31rem;
 	background: #fff;
@@ -112,12 +121,7 @@ body{
 	flex-wrap:wrap;
 	align-content:flex-start;  	
 }
-/* .list .swiper-pagination{
-	position: absolute;
-	bottom: .1rem;
-    left: 50%;
-    transform: translateX(-50%);
-} */
+
 .list section a{
 	display: block;
 	/* float: left; */
